--- a/client/signup.css
+++ b/client/signup.css
@@ -7,6 +7,10 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
+    background-image: url(image/pngtree-asian-food-background-with-various-ingredients-on-rustic-stone-image_15700117.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover; 
   }
   
   .container {
@@ -36,7 +40,7 @@ body {
   
   input[type="text"],
   input[type="email"],
-  input[type="pass"],
+  input[type="password"],
   textarea {
     width: 100%;
     padding: 10px;
@@ -53,7 +57,7 @@ body {
   button {
     width: 100%;
     padding: 10px;
-    background-color:#fd31ab;
+    background-color:#f41f1f;
     color: white;
     border: none;
     border-radius: 4px;
@@ -71,3 +75,4 @@ body {
     background-color: black;
   }
   
+
